--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 	<title>Hello World!</title>
 </head>
 <body bgcolor="#FFFFF" background="C:\Users\Admin\OneDrive\Pictures\Photo & Picture Resizer">
-<h1 style="text-align: center;">Hello World!<br/>Welcome to my Web 🌞 Server.</h1>
+<h1 style="text-align: center;">👨‍👩‍👧‍👦👨‍👩‍👧👩‍👩‍👧‍👦<br/>Hello World!<br/>Welcome to my Web 🌞 Server.</h1>
 <hr align="centre" size="6" width="50%"/>
 <p><font size="+2" color="green"><i>In the beginning, Tim created the HyperText Markup Language. The Internet was without form and void, and text was upon the face of the monitor and the Hands of Tim were moving over the face of the keyboard. And Tim said, Let there be links; and there were links. And Tim saw that the links were good; and Tim separated the links from the text. Tim called the links Anchors, and the text He called Other Stuff. And the whole thing together was the first Web Page.</i></font></p>
 </body>
